--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
 	<link rel="stylesheet" href="/assets/css/site.css" type="text/css">
+	<link href="/favicon.ico" rel="shortcut icon">
 </head>
