Added scripts and css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
 		</div>
 		<div class="navibar-options">
 			<ul>
-				<li><a target="_self" href="About">about</a></li>
-				<li><a target="_self" href="Contact">contact</a></li>
-				<li><a target="_self" href="Past">past</a></li>
+				<li><a target="_self" href="../about">about</a></li>
+				<li><a target="_self" href="../contact">contact</a></li>
+				<li><a target="_self" href="../archive">past</a></li>
 			</ul>
 		</div>
 	</div>
