--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css' type="text/css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arvo" type="text/css">
 	<link rel="stylesheet" href="/assets/css/Site.css" type="text/css">
+	<link rel="stylesheet" href="/assets/css/syntax.css" type="text/css">
 	<link href="/favicon.ico" rel="shortcut icon">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
