--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
 		</div>
 		<div class="navibar-options">
 			<ul>
-				<li><a href="../about">about</a></li>
-				<li><a href="../contact">contact</a></li>
-				<li><a href="../archive">past</a></li>
+				<li><a href="/about">about</a></li>
+				<li><a href="https://github.com/MatthewHartz/MatthewHartz.github.io/issues/new">contact</a></li>
+				<li><a href="/archive">past</a></li>
 			</ul>
 		</div>
 	</div>
