--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,13 +9,15 @@
 			</h1>
 		</div>
 	</div>
-	<div id="navibar" data-spy="affix" data-offset-top="80"">
-		<div class="social-wrapper">
-			<a class="fa fa-github fa-3x" href="https://github.com/rvbmrdonut"></a>
-			<a class="fa fa-linkedin fa-3x" href="https://www.linkedin.com/profile/view?id=339436721&trk=hp-identity-name"></a>
-			<a class="fa fa-twitter fa-3x" href="https://twitter.com/MatthewVHartz"></a>
-		</div>
-		<div class="navibar-options">
+	<nav role="navigation" class="navbar navbar-default" id="navibar" data-spy="affix" data-offset-top="80">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 			<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 				<div class="flipper">
 					<div class="front">
@@ -30,18 +32,16 @@
 					</div>
 				</div>
 			</div>
-			
-			<!--
-			<div id=stickyImage>
-				<a href="/"><img src="/assets/images/Profile.jpg" /></a>
-			</div>
-			-->
-			
-			<ul>
-				<li><a href="/about">about</a></li>
+        </div>
+        <!-- Collection of nav links and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-center">
+                <li><a href="/about">about</a></li>
 				<li><a href="https://github.com/MatthewHartz/MatthewHartz.github.io/issues/new">contact</a></li>
 				<li><a href="/archive">past</a></li>
-			</ul>
-		</div>
-	</div>
+            </ul>
+        </div>
+		
+		
+    </nav>
 </div>
