--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -5,12 +5,16 @@
 }
 
 html {
+	height: 100%;
+	width: 100%;
 }
 
 body {
     font-family: 'Arvo', serif !important;
     font-size: 16px;
 	overflow-x: hidden;
+	height: 100%;
+	width: 100%;
 }
 
 #content h1 {
