Restyling for mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,25 @@
 <div id="banner">
 	<div id="header">
 		<div id="headerWrapper">
-			<div>
-				<div id="imageCropper">
-					<a href="/"><img src="/assets/images/Profile.jpg" id="profilePic" /></a>
-				</div>
-				<h1 id="title">
+			<div id="logoWrapper"">
+				<a href="/">
+					<img src="/assets/images/ProfileRound.jpg" id="profilePic" />
+				</a>
+				<!--<h1 id="title">
 					<a target="_self" href="/">Engineer In Dev</a>
-				</h1>
+				</h1>-->
+				<div class="social-wrapper">
+					<a class="fa fa-github fa-3x" href="https://github.com/rvbmrdonut"></a>
+					<a class="fa fa-linkedin fa-3x" href="https://www.linkedin.com/profile/view?id=339436721&trk=hp-identity-name"></a>
+					<a class="fa fa-twitter fa-3x" href="https://twitter.com/MatthewVHartz"></a>
+				</div>
 			</div>
 			<!-- Other website links -->
-			<div class="social-wrapper">
-				<a class="fa fa-github fa-3x" href="https://github.com/rvbmrdonut"></a>
-				<a class="fa fa-linkedin fa-3x" href="https://www.linkedin.com/profile/view?id=339436721&trk=hp-identity-name"></a>
-				<a class="fa fa-twitter fa-3x" href="https://twitter.com/MatthewVHartz"></a>
+			<div id="titleWrapper">
+				<!--<img src="/assets/images/Titlelogo.png" id="title" />-->
+				<div>Engineer</div>
+				<div>In</div>
+				<div>Dev</div>
 			</div>
 		</div>
 	</div>
